# python-scripts

./: .gitignore  aspectRatio.py  bitbucket.py  calcBlocks.py  convert_fonts.py  create_project.py  cyr_to_lat.py  generatePassword.py  get_percent.py  git_mirror.py  main.py  openGitRepo.py  pyproject.toml  python-scripts.py  replace_word.py  requirements.txt  sortFiles.py  tinker.py  zip-folders.py
classes/: Select.py  SortFiles.py
libs/: appendToFile.py  createDir.py  createFile.py  createMyScssFile.py  file.py  getLayoutPath.py  layoutToFile.py
